Correcciones del core para adaptar BD produccion

--- a/orion/blueprints/modulos/templates/modulos/detail.jinja2
+++ b/orion/blueprints/modulos/templates/modulos/detail.jinja2
@@ -24,6 +24,7 @@
         {{ detail.label_value('Icono', modulo.icono) }}
         {{ detail.label_value('Ruta', modulo.ruta) }}
         {{ detail.label_value_boolean('En menú de navegación', modulo.en_navegacion) }}
+        {{ detail.label_value_boolean('En plataforma orión', modulo.en_plataforma_orion) }}
         {# detail.label_value('Creado', moment(modulo.creado).format('llll')) #}
     {% endcall %}
     {% if current_user.can_view('PERMISOS') %}
