--- a/orion/blueprints/carreras/templates/carreras/list.jinja2
+++ b/orion/blueprints/carreras/templates/carreras/list.jinja2
@@ -10,9 +10,9 @@
             {% if estatus == 'A' %}{{ topbar.button_list_inactive('Inactivos', url_for('carreras.list_inactive')) }}{% endif %}
             {% if estatus == 'B' %}{{ topbar.button_list_active('Activos', url_for('carreras.list_active')) }}{% endif %}
         {% endif %}
-        {# if current_user.can_insert('CARRERAS') %}
+        {% if current_user.can_insert('CARRERAS') %}
             {{ topbar.button_new('Nuevo Carrera', url_for('carreras.new')) }}
-        {% endif #}
+        {% endif %}
     {% endcall %}
 {% endblock %}
 
