--- a/orion/blueprints/distritos/templates/distritos/detail.jinja2
+++ b/orion/blueprints/distritos/templates/distritos/detail.jinja2
@@ -26,6 +26,38 @@
     {% endcall %}
     <!-- card Centros de Trabajo -->
     {% call detail.card('Centros de Trabajos') %}
+        <!-- Filtros Centro de Trabajo -->
+        <div class="row">
+            <div class="col">
+                <form class="row g-1 mb-3" id="filtradorForm" onsubmit="filtrosCentrosTrabajos.buscar(); return false;">
+                    <div class="col-5">
+                        <div class="form-floating">
+                            <input id="filtroClave" type="text" class="form-control" aria-label="Clave" style="text-transform: uppercase;">
+                            <label for="filtroClave">Clave</label>
+                        </div>
+                    </div>
+                    <div class="col-5">
+                        <div class="form-floating">
+                            <input id="filtroNombre" type="text" class="form-control" aria-label="Nombre" style="text-transform: uppercase;">
+                            <label for="filtroNombre">Nombre</label>
+                        </div>
+                    </div>
+                    <div class="col-2 text-end">
+                        <button title="Buscar" class="btn btn-primary btn-lg" onclick="filtrosCentrosTrabajos.buscar(); return false;" id="button-buscar"><span class="iconify" data-icon="mdi:magnify"></span></button>
+                        <button title="Limpiar" class="btn btn-warning btn-lg" type="reset" onclick="filtrosCentrosTrabajos.limpiar();" id="button-limpiar"><span class="iconify" data-icon="mdi:broom"></span></button>
+                    </div>
+                </form>
+            </div>
+        </div>
+        <!-- DataTable Centro de Trabajo -->
+        <table id="centros_trabajos_datatable" class="table display nowrap" style="width:100%">
+            <thead>
+                <tr>
+                    <th>Clave</th>
+                    <th>Nombre</th>
+                </tr>
+            </thead>
+        </table>
     {% endcall %}
     <!-- card Personas -->
     {% call detail.card('Personas') %}
@@ -69,17 +101,42 @@
     <script src="/static/js/datatables-constructor.js"></script>
     <script src="/static/js/datatables-filtros.js"></script>
     <script>
+        // DataTable CentrosTrabajos
+        const constructorDTCentrosTrabajos = new ConfigDataTable( '{{ csrf_token() }}' );
+        let configDTCentrosTrabajos = constructorDTCentrosTrabajos.config();
+        configDTCentrosTrabajos['ajax']['url'] = '/centros_trabajos/datatable_json';
+        configDTCentrosTrabajos['ajax']['data'] = {{ filtros_centros_trabajos }};
+        configDTCentrosTrabajos['columns'] = [
+            { data: 'detalle' },
+            { data: 'nombre' }
+        ];
+        configDTCentrosTrabajos['columnDefs'] = [
+            {
+                targets: 0, // detalle
+                data: null,
+                render: function(data, type, row, meta) {
+                    return '<a href="' + data.url + '">' + data.clave + '</a>';
+                }
+            }
+        ];
+        // Filtros CentrosTrabajos
+        const filtrosCentrosTrabajos = new FiltrosDataTable('#centros_trabajos_datatable', configDTCentrosTrabajos);
+        filtrosCentrosTrabajos.agregarInput('filtroClave', 'clave');
+        filtrosCentrosTrabajos.agregarInput('filtroNombre', 'nombre');
+        filtrosCentrosTrabajos.precargar();
+    </script>
+    <script>
         // DataTable Personas
-        const constructorDataTable = new ConfigDataTable( '{{ csrf_token() }}' );
-        let configDataTable = constructorDataTable.config();
-        configDataTable['ajax']['url'] = '/personas/datatable_json';
-        configDataTable['ajax']['data'] = {{ filtros_personas }};
-        configDataTable['columns'] = [
+        const constructorDTPersonas = new ConfigDataTable( '{{ csrf_token() }}' );
+        let configDTPersonas = constructorDTPersonas.config();
+        configDTPersonas['ajax']['url'] = '/personas/datatable_json';
+        configDTPersonas['ajax']['data'] = {{ filtros_personas }};
+        configDTPersonas['columns'] = [
             { data: 'detalle' },
             { data: 'sexo' },
             { data: 'situacion' }
         ];
-        configDataTable['columnDefs'] = [
+        configDTPersonas['columnDefs'] = [
             {
                 targets: 0, // detalle
                 data: null,
@@ -89,7 +146,7 @@
             }
         ];
         // Filtros Personas
-        const filtrosPersonas = new FiltrosDataTable('#personas_datatable', configDataTable);
+        const filtrosPersonas = new FiltrosDataTable('#personas_datatable', configDTPersonas);
         filtrosPersonas.agregarInput('filtroNombreCompleto', 'nombre_completo');
         filtrosPersonas.precargar();
     </script>
