Centros de trabajos completo

--- a/orion/blueprints/centros_trabajos/templates/centros_trabajos/detail.jinja2
+++ b/orion/blueprints/centros_trabajos/templates/centros_trabajos/detail.jinja2
@@ -9,11 +9,11 @@
     {% call topbar.page_buttons('Centro de Trabajo ' + centro_trabajo.clave) %}
         {{ topbar.button_previous('Centros de Trabajos', url_for('centros_trabajos.list_active')) }}
         {% if current_user.can_edit('CENTROS TRABAJOS') %}
-            {# {{ topbar.button_edit('Editar', url_for('centros_trabajos.edit', centro_trabajo_id=centro_trabajo.id)) }} #}
+            {{ topbar.button_edit('Editar', url_for('centros_trabajos.edit', centro_trabajo_id=centro_trabajo.id)) }}
         {% endif %}
         {% if current_user.can_admin('CENTROS TRABAJOS') %}
-            {# {% if centro_trabajo.estatus == 'A' %}{{ topbar.button_delete('Eliminar', url_for('centros_trabajos.delete', centro_trabajo_id=centro_trabajo.id)) }}{% endif %}
-            {% if centro_trabajo.estatus == 'B' %}{{ topbar.button_recover('Recuperar', url_for('centros_trabajos.recover', centro_trabajo_id=centro_trabajo.id)) }}{% endif %} #}
+            {% if centro_trabajo.estatus == 'A' %}{{ topbar.button_delete('Eliminar', url_for('centros_trabajos.delete', centro_trabajo_id=centro_trabajo.id)) }}{% endif %}
+            {% if centro_trabajo.estatus == 'B' %}{{ topbar.button_recover('Recuperar', url_for('centros_trabajos.recover', centro_trabajo_id=centro_trabajo.id)) }}{% endif %}
         {% endif %}
     {% endcall %}
 {% endblock %}
