--- a/orion/blueprints/centros_trabajos/templates/centros_trabajos/list.jinja2
+++ b/orion/blueprints/centros_trabajos/templates/centros_trabajos/list.jinja2
@@ -11,7 +11,7 @@
             {% if estatus == 'B' %}{{ topbar.button_list_active('Activos', url_for('centros_trabajos.list_active')) }}{% endif %}
         {% endif %}
         {% if current_user.can_insert('CENTROS TRABAJOS') %}
-            {# {{ topbar.button_new('Nuevo Centro de Trabajo', url_for('centros_trabajos.new')) }} #}
+            {{ topbar.button_new('Nuevo Centro de Trabajo', url_for('centros_trabajos.new')) }}
         {% endif %}
     {% endcall %}
 {% endblock %}
