Boton Cancelar abajo a la derecha

--- a/orion/blueprints/areas/templates/areas/edit.jinja2
+++ b/orion/blueprints/areas/templates/areas/edit.jinja2
@@ -5,9 +5,7 @@
 {% block title %}Editar Área {{ area.id }}{% endblock %}
 
 {% block topbar_actions %}
-    {% call topbar.page_buttons('Editar ' + area.id | string) %}
-        {{ topbar.button_cancel() }}
-    {% endcall %}
+    {{ topbar.page('Editar ' + area.id | string) }}
 {% endblock %}
 
 {% block content %}
