--- a/orion/blueprints/areas/templates/areas/new.jinja2
+++ b/orion/blueprints/areas/templates/areas/new.jinja2
@@ -11,9 +11,7 @@
 {% endblock %}
 
 {% block topbar_actions %}
-    {% call topbar.page_buttons('Nueva Área') %}
-        {{ topbar.button_cancel() }}
-    {% endcall %}
+    {{ topbar.page('Nueva Área') }}
 {% endblock %}
 
 {% block content %}
