--- a/orion/blueprints/modulos/templates/modulos/new.jinja2
+++ b/orion/blueprints/modulos/templates/modulos/new.jinja2
@@ -5,9 +5,7 @@
 {% block title %}Nuevo Módulo{% endblock %}
 
 {% block topbar_actions %}
-    {% call topbar.page_buttons('Nuevo Módulo') %}
-        {{ topbar.button_cancel() }}
-    {% endcall %}
+    {{ topbar.page('Nuevo Módulo') }}
 {% endblock %}
 
 {% block content %}
