--- a/orion/blueprints/carreras/templates/carreras/new.jinja2
+++ b/orion/blueprints/carreras/templates/carreras/new.jinja2
@@ -5,9 +5,7 @@
 {% block title %}Nueva Carrera{% endblock %}
 
 {% block topbar_actions %}
-    {% call topbar.page_buttons('Nueva Carrera') %}
-        {{ topbar.button_cancel() }}
-    {% endcall %}
+    {{ topbar.page('Nueva Carrera') }}
 {% endblock %}
 
 {% block content %}
