--- a/orion/blueprints/distritos/templates/distritos/new.jinja2
+++ b/orion/blueprints/distritos/templates/distritos/new.jinja2
@@ -5,9 +5,7 @@
 {% block title %}Nuevo Distrito{% endblock %}
 
 {% block topbar_actions %}
-    {% call topbar.page_buttons('Nuevo Distrito') %}
-        {{ topbar.button_cancel() }}
-    {% endcall %}
+    {{ topbar.page('Nuevo Distrito') }}
 {% endblock %}
 
 {% block content %}
