--- a/orion/blueprints/modulos/templates/modulos/edit.jinja2
+++ b/orion/blueprints/modulos/templates/modulos/edit.jinja2
@@ -5,9 +5,7 @@
 {% block title %}Editar Modulo {{ modulo.nombre_corto }}{% endblock %}
 
 {% block topbar_actions %}
-    {% call topbar.page_buttons('Editar Módulo ' + modulo.nombre_corto) %}
-        {{ topbar.button_cancel() }}
-    {% endcall %}
+    {{ topbar.page('Editar ' + modulo.nombre_corto) }}
 {% endblock %}
 
 {% block content %}
