--- a/orion/blueprints/niveles_academicos/templates/niveles_academicos/edit.jinja2
+++ b/orion/blueprints/niveles_academicos/templates/niveles_academicos/edit.jinja2
@@ -5,9 +5,7 @@
 {% block title %}Editar Nivel Académico {{ nivel_academico.nombre }}{% endblock %}
 
 {% block topbar_actions %}
-    {% call topbar.page_buttons('Editar ' + nivel_academico.nombre) %}
-        {{ topbar.button_cancel() }}
-    {% endcall %}
+    {{ topbar.page('Editar ' + nivel_academico.nombre) }}
 {% endblock %}
 
 {% block content %}
