--- a/orion/blueprints/niveles_academicos/templates/niveles_academicos/new.jinja2
+++ b/orion/blueprints/niveles_academicos/templates/niveles_academicos/new.jinja2
@@ -5,9 +5,7 @@
 {% block title %}Nuevo Nivel Académico{% endblock %}
 
 {% block topbar_actions %}
-    {% call topbar.page_buttons('Nuevo Nivel Académico') %}
-        {{ topbar.button_cancel() }}
-    {% endcall %}
+    {{ topbar.page('Nuevo Nivel Académico') }}
 {% endblock %}
 
 {% block content %}
