--- a/orion/blueprints/roles/templates/roles/edit.jinja2
+++ b/orion/blueprints/roles/templates/roles/edit.jinja2
@@ -5,9 +5,7 @@
 {% block title %}Editar Rol {{ rol.nombre }}{% endblock %}
 
 {% block topbar_actions %}
-    {% call topbar.page_buttons('Editar Rol ' + rol.nombre) %}
-        {{ topbar.button_cancel() }}
-    {% endcall %}
+    {{ topbar.page('Editar ' + rol.nombre) }}
 {% endblock %}
 
 {% block content %}
