--- a/orion/blueprints/usuarios/templates/usuarios/edit.jinja2
+++ b/orion/blueprints/usuarios/templates/usuarios/edit.jinja2
@@ -2,12 +2,10 @@
 {% import 'macros/form.jinja2' as f with context %}
 {% import 'macros/topbar.jinja2' as topbar %}
 
-{% block title %}Editar Usuario {{ usuario.email }}{% endblock %}
+{% block title %}Editar {{ usuario.email }}{% endblock %}
 
 {% block topbar_actions %}
-    {% call topbar.page_buttons('Editar Usuario ' + usuario.email) %}
-        {{ topbar.button_cancel() }}
-    {% endcall %}
+    {{ topbar.page('Editar ' + usuario.email) }}
 {% endblock %}
 
 {% block content %}
