--- a/orion/blueprints/usuarios_roles/templates/usuarios_roles/new_with_rol.jinja2
+++ b/orion/blueprints/usuarios_roles/templates/usuarios_roles/new_with_rol.jinja2
@@ -5,9 +5,7 @@
 {% block title %}{{ titulo }}{% endblock %}
 
 {% block topbar_actions %}
-    {% call topbar.page_buttons(titulo) %}
-        {{ topbar.button_cancel() }}
-    {% endcall %}
+    {{ topbar.page(titulo) }}
 {% endblock %}
 
 {% block content %}
