--- a/orion/blueprints/personas/templates/personas/detail.jinja2
+++ b/orion/blueprints/personas/templates/personas/detail.jinja2
@@ -27,6 +27,9 @@
         {{ detail.label_value_big('Situación', persona.situacion) }}
         {# detail.label_value('Creado', moment(persona.creado, local=True).format('llll')) #}
     {% endcall %}
+    {% call detail.card("Acciones") %}
+        <a href="{{url_for('licencias.new_with_persona', persona_id=persona.id)}}" class="btn btn-primary">Agregar Licencia</a>
+    {% endcall %}
 {% endblock %}
 
 {% block custom_javascript %}
