--- a/orion/blueprints/personas/templates/personas/detail.jinja2
+++ b/orion/blueprints/personas/templates/personas/detail.jinja2
@@ -2,6 +2,7 @@
 {% import 'macros/detail.jinja2' as detail %}
 {% import 'macros/modals.jinja2' as modals %}
 {% import 'macros/topbar.jinja2' as topbar %}
+{% import 'macros/list.jinja2' as list %}
 
 {% block title %}Persona {{ persona.nombre_completo }}{% endblock %}
 
@@ -30,6 +31,23 @@
     {% call detail.card("Acciones") %}
         <a href="{{url_for('licencias.new_with_persona', persona_id=persona.id)}}" class="btn btn-primary">Agregar Licencia</a>
     {% endcall %}
+    <!-- Ver historial de puestos -->
+    {% if current_user.can_view("HISTORIAL PUESTOS") %}
+    {% call detail.card("Historial de Puestos") %}
+        <!-- DataTable HistorialPuestos -->
+        <table id="historial_puestos_datatable" class="table display nowrap" style="width:100%">
+            <thead>
+                <tr>
+                    <th>Período</th>
+                    <th>Clave Puesto</th>
+                    <th>Puesto Función</th>
+                    <th>Centro de Trabajo</th>
+                </tr>
+            </thead>
+        </table>
+        <a href="{{url_for('historial_puestos.new_with_person', persona_id=persona.id)}}" class="btn btn-primary">Agregar Puesto</a>
+    {% endcall %}
+    {% endif %}
 {% endblock %}
 
 {% block custom_javascript %}
@@ -38,4 +56,34 @@
         {% if persona.estatus == 'B' %}{{ modals.custom_javascript_recover('Recuperar', '¿Recuperar a ' + persona.nombre_completo + '?') }}{% endif %}
     {% endif %}
     {{ detail.moment_js(moment) }}
+    <!-- DataTables -->
+    <script src="/static/js/datatables-constructor.js"></script>
+    <script src="/static/js/datatables-filtros.js"></script>
+    {% if current_user.can_view("HISTORIAL PUESTOS") %}
+        <script>
+            // DataTable HistorialPuestos
+            const constructorDataTable = new ConfigDataTable( '{{ csrf_token() }}' );
+            let configDataTable = constructorDataTable.config();
+            configDataTable['ajax']['url'] = '/historial_puestos/datatable_json';
+            configDataTable['ajax']['data'] = {"estatus": "A", "persona_id": {{ persona.id }}};
+            configDataTable['columns'] = [
+                { data: 'detalle' },
+                { data: 'clave_puesto' },
+                { data: 'puesto_funcion' },
+                { data: 'centro_trabajo' }
+            ];
+            configDataTable['columnDefs'] = [
+                {
+                    targets: 0, // detalle
+                    data: null,
+                    render: function(data, type, row, meta) {
+                        return '<a href="' + data.url + '">' + data.periodo + '</a>';
+                    }
+                }
+            ];
+            // Filtros HistorialPuestos
+            const filtrosHistorialPuestos = new FiltrosDataTable('#historial_puestos_datatable', configDataTable);
+            filtrosHistorialPuestos.precargar();
+        </script>
+    {% endif %}
 {% endblock %}
