--- a/orion/blueprints/historial_puestos/templates/historial_puestos/detail.jinja2
+++ b/orion/blueprints/historial_puestos/templates/historial_puestos/detail.jinja2
@@ -9,11 +9,11 @@
     {% call topbar.page_buttons('Historial de Puesto') %}
         {{ topbar.button_previous('Persona', url_for('personas.detail', persona_id=historial_puesto.persona.id)) }}
         {% if current_user.can_edit('HISTORIAL PUESTOS') %}
-            {# {{ topbar.button_edit('Editar', url_for('historial_puestos.edit', historial_puesto_id=historial_puesto.id)) }} #}
+            {{ topbar.button_edit('Editar', url_for('historial_puestos.edit', historial_puesto_id=historial_puesto.id)) }}
         {% endif %}
         {% if current_user.can_admin('HISTORIAL PUESTOS') %}
-            {# {% if historial_puesto.estatus == 'A' %}{{ topbar.button_delete('Eliminar', url_for('historial_puestos.delete', historial_puesto_id=historial_puesto.id)) }}{% endif %}
-            {% if historial_puesto.estatus == 'B' %}{{ topbar.button_recover('Recuperar', url_for('historial_puestos.recover', historial_puesto_id=historial_puesto.id)) }}{% endif %} #}
+            {% if historial_puesto.estatus == 'A' %}{{ topbar.button_delete('Eliminar', url_for('historial_puestos.delete', historial_puesto_id=historial_puesto.id)) }}{% endif %}
+            {% if historial_puesto.estatus == 'B' %}{{ topbar.button_recover('Recuperar', url_for('historial_puestos.recover', historial_puesto_id=historial_puesto.id)) }}{% endif %}
         {% endif %}
     {% endcall %}
 {% endblock %}
