--- a/orion/blueprints/historial_puestos/templates/historial_puestos/edit.jinja2
+++ b/orion/blueprints/historial_puestos/templates/historial_puestos/edit.jinja2
@@ -2,7 +2,7 @@
 {% import 'macros/form.jinja2' as f with context %}
 {% import 'macros/topbar.jinja2' as topbar %}
 
-{% block title %}Nuevo Historial de Puesto{% endblock %}
+{% block title %}Editar Historial de Puesto {{ historial_puesto.id }}{% endblock %}
 
 {% block custom_head %}
     <!-- Select2 bootstrap -->
@@ -11,13 +11,13 @@
 {% endblock %}
 
 {% block topbar_actions %}
-    {{ topbar.page('Nuevo Historial de Puesto') }}
+    {{ topbar.page('Editar - Historial de Puesto') }}
 {% endblock %}
 
 {% block content %}
     {% call f.card() %}
-        {% set form_kwargs = {'persona_id': persona.id} %}
-        {% call f.form_tag('historial_puestos.new_with_person', fid='historial_puesto_form', **form_kwargs) %}
+        {% set form_kwargs = {'historial_puesto_id': historial_puesto.id} %}
+        {% call f.form_tag('historial_puestos.edit', fid='historial_puesto_form', **form_kwargs) %}
             {% call f.form_group(form.persona, readonly=true) %}{% endcall %}
             {% call f.form_group(form.puesto) %}{% endcall %}
             {% call f.form_group(form.funcion) %}{% endcall %}
@@ -35,6 +35,7 @@
         {% endcall %}
     {% endcall %}
 {% endblock %}
+
 
 {% block custom_javascript %}
     <!-- Select2 bootstrap -->
@@ -58,7 +59,21 @@
                 minimumInputLength: 3,
                 allowClear: true
             });
-            $('#funcion').prop("disabled", true);
+            // Seleccionar Centro de Trabajo guardado anteriormente
+            let data = {
+                id: '{{historial_puesto.puesto_funcion.puesto.id}}',
+                text: '{{historial_puesto.puesto_funcion.puesto.clave}}' + ': ' + '{{historial_puesto.puesto_funcion.puesto.nombre}}'
+            };
+            let newOption = new Option(data.text, data.id, false, false);
+            $('#puesto').append(newOption).trigger('change');
+
+            // Seleccionar Área guardado anteriormente
+            let data_2 = {
+                id: '{{historial_puesto.puesto_funcion.id}}',
+                text: '{{historial_puesto.puesto_funcion.nombre}}'
+            };
+            let newOption_2 = new Option(data_2.text, data_2.id, false, false);
+            $('#funcion').append(newOption_2).trigger('change');
         });
 
         $('#puesto').on("select2:clear", function (e) {
@@ -85,6 +100,7 @@
                 placeholder: "Funciones",
                 allowClear: false,
             });
+            $('#funcion').val(null).trigger('change');
         });
     </script>
     <!-- Select2 combo: Centro de Trabajo y Áreas -->
@@ -105,8 +121,21 @@
             minimumInputLength: 3,
             allowClear: true
         });
-        $('#area').val(null).trigger('change');
-        $('#area').prop("disabled", true);
+         // Seleccionar Centro de Trabajo guardado anteriormente
+        let data = {
+            id: '{{centro_trabajo.id}}',
+            text: '{{centro_trabajo.clave}}' + ': ' + '{{centro_trabajo.nombre}}'
+        };
+        let newOption = new Option(data.text, data.id, false, false);
+        $('#centro_trabajo').append(newOption).trigger('change');
+
+        // Seleccionar Área guardado anteriormente
+        let data_area = {
+            id: '{{area.id}}',
+            text: '{{area.nombre}}'
+        };
+        let newOption_area = new Option(data_area.text, data_area.id, false, false);
+        $('#area').append(newOption_area).trigger('change');
     });
 
     $('#centro_trabajo').on("select2:clear", function (e) {
@@ -133,6 +162,7 @@
             placeholder: "Areas",
             allowClear: false,
         });
+        $('#area').val(null).trigger('change');
     });
     </script>
     <!-- Select2 para Turnos -->
@@ -151,6 +181,16 @@
             placeholder: "Turno: Descripción",
             allowClear: false,
         });
+        // Seleccionar el Turno guardado anteriormente
+        let data = {
+            id: '{{historial_puesto.turno.id}}',
+            text: '{{historial_puesto.turno.nombre}}'
+        };
+        if ('{{historial_puesto.turno.descripcion}}' != "") {
+            data.text = data.text + ': ' + '{{historial_puesto.turno.descripcion}}';
+        }
+        let newOption = new Option(data.text, data.id, false, false);
+        $('#turno').append(newOption).trigger('change');
     });
     </script>
 {% endblock %}
