--- a/orion/blueprints/personas/templates/personas/detail.jinja2
+++ b/orion/blueprints/personas/templates/personas/detail.jinja2
@@ -29,7 +29,7 @@
         {# detail.label_value('Creado', moment(persona.creado, local=True).format('llll')) #}
     {% endcall %}
     {% call detail.card("Acciones") %}
-        <a href="{{url_for('licencias.new_with_persona', persona_id=persona.id)}}" class="btn btn-primary">Agregar Licencia</a>
+        <a href="{{url_for('licencias.new_with_person', persona_id=persona.id)}}" class="btn btn-primary">Agregar Licencia</a>
     {% endcall %}
     <!-- Ver historial de puestos -->
     {% if current_user.can_view("HISTORIAL PUESTOS") %}
