Blueprint de Atribuciones completa

--- a/orion/blueprints/centros_trabajos/templates/centros_trabajos/detail.jinja2
+++ b/orion/blueprints/centros_trabajos/templates/centros_trabajos/detail.jinja2
@@ -35,10 +35,10 @@
         {{ detail.label_value('Teléfono', centro_trabajo.telefono) }}
         {{ detail.label_value('Núm. de Ext.', centro_trabajo.num_ext) }}
         {{ detail.label_value_boolean('Activo', centro_trabajo.activo) }}
-        {# {{ detail.label_value('Creado', moment(centro_trabajo.creado, local=True).format('llll')) }} #}
     {% endcall %}
     <!-- Historial de Puestos -->
     {% call detail.card('Historial de Puestos') %}
+    <p>TODO: FALTA: listado de historial de puestos</p>
     {% endcall %}
 {% endblock %}
 
