--- a/orion/blueprints/personas/templates/personas/detail.jinja2
+++ b/orion/blueprints/personas/templates/personas/detail.jinja2
@@ -1,90 +1,1 @@
-{% extends 'layouts/app.jinja2' %}
-{% import 'macros/detail.jinja2' as detail %}
-{% import 'macros/modals.jinja2' as modals %}
-{% import 'macros/topbar.jinja2' as topbar %}
-{% import 'macros/list.jinja2' as list %}
-
-{% block title %}Persona {{ persona.nombre_completo }}{% endblock %}
-
-{% block topbar_actions %}
-    {% call topbar.page_buttons('Persona ' + persona.nombre_completo) %}
-        {{ topbar.button_previous('Personas', url_for('personas.list_active')) }}
-        {# if current_user.can_edit('PERSONAS') %}
-            {{ topbar.button_edit('Editar', url_for('personas.edit', persona_id=persona.id)) }}
-        {% endif #}
-        {# if current_user.can_admin('PERSONAS') %}
-            {% if persona.estatus == 'A' %}{{ topbar.button_delete('Eliminar', url_for('personas.delete', persona_id=persona.id)) }}{% endif %}
-            {% if persona.estatus == 'B' %}{{ topbar.button_recover('Recuperar', url_for('personas.recover', persona_id=persona.id)) }}{% endif %}
-        {% endif #}
-    {% endcall %}
-{% endblock %}
-
-{% block content %}
-    {% call detail.card(estatus=persona.estatus) %}
-        {# detail.label_value_big('Nombre completo', persona.nombre_completo) #}
-        {{ detail.label_value_big('No. Emp.', persona.numero_empleado) }}
-        {{ detail.label_value('R.F.C.', persona.rfc) }}
-        {{ detail.label_value('C.U.R.P.', persona.curp) }}
-        {{ detail.label_value_big('Situación', persona.situacion) }}
-        {# detail.label_value('Creado', moment(persona.creado, local=True).format('llll')) #}
-    {% endcall %}
-    {% call detail.card("Acciones") %}
-        <a href="{{url_for('licencias.new_with_persona_id', persona_id=persona.id)}}" class="btn btn-primary">Agregar Licencia</a>
-        <a href="{{url_for('incapacidades.new_with_persona_id', persona_id=persona.id)}}" class="btn btn-primary">Agregar Incapacidad</a>
-    {% endcall %}
-    <!-- Ver historial de puestos -->
-    {% if current_user.can_view("HISTORIAL PUESTOS") %}
-    {% call detail.card("Historial de Puestos") %}
-        <!-- DataTable HistorialPuestos -->
-        <table id="historial_puestos_datatable" class="table display nowrap" style="width:100%">
-            <thead>
-                <tr>
-                    <th>Período</th>
-                    <th>Clave Puesto</th>
-                    <th>Puesto Función</th>
-                    <th>Centro de Trabajo</th>
-                </tr>
-            </thead>
-        </table>
-        <a href="{{url_for('historial_puestos.new_with_persona_id', persona_id=persona.id)}}" class="btn btn-primary">Agregar Puesto</a>
-    {% endcall %}
-    {% endif %}
-{% endblock %}
-
-{% block custom_javascript %}
-    {% if current_user.can_admin('PERSONAS') %}
-        {% if persona.estatus == 'A' %}{{ modals.custom_javascript_delete('Eliminar', '¿Eliminar a ' + persona.nombre_completo + '?') }}{% endif %}
-        {% if persona.estatus == 'B' %}{{ modals.custom_javascript_recover('Recuperar', '¿Recuperar a ' + persona.nombre_completo + '?') }}{% endif %}
-    {% endif %}
-    {{ detail.moment_js(moment) }}
-    <!-- DataTables -->
-    <script src="/static/js/datatables-constructor.js"></script>
-    <script src="/static/js/datatables-filtros.js"></script>
-    {% if current_user.can_view("HISTORIAL PUESTOS") %}
-        <script>
-            // DataTable HistorialPuestos
-            const constructorDataTable = new ConfigDataTable( '{{ csrf_token() }}' );
-            let configDataTable = constructorDataTable.config();
-            configDataTable['ajax']['url'] = '/historial_puestos/datatable_json';
-            configDataTable['ajax']['data'] = {"estatus": "A", "persona_id": {{ persona.id }}};
-            configDataTable['columns'] = [
-                { data: 'detalle' },
-                { data: 'clave_puesto' },
-                { data: 'puesto_funcion' },
-                { data: 'centro_trabajo' }
-            ];
-            configDataTable['columnDefs'] = [
-                {
-                    targets: 0, // detalle
-                    data: null,
-                    render: function(data, type, row, meta) {
-                        return '<a href="' + data.url + '">' + data.periodo + '</a>';
-                    }
-                }
-            ];
-            // Filtros HistorialPuestos
-            const filtrosHistorialPuestos = new FiltrosDataTable('#historial_puestos_datatable', configDataTable);
-            filtrosHistorialPuestos.precargar();
-        </script>
-    {% endif %}
-{% endblock %}
+{% extends 'personas/detail_datos_generales.jinja2' %}
