--- a/orion/blueprints/personas/templates/personas/detail_datos_generales.jinja2
+++ b/orion/blueprints/personas/templates/personas/detail_datos_generales.jinja2
@@ -21,21 +21,72 @@
 
 {% block content %}
     {% call detail.card('Datos Generales', estatus=persona.estatus) %}
-        {{ detail.label_value('No. Emp.', persona.numero_empleado) }}
-        {{ detail.label_value('R.F.C.', persona.rfc) }}
-        {{ detail.label_value('C.U.R.P.', persona.curp) }}
-        {{ detail.label_value_big('Situación', persona.situacion) }}
+        <div class="row">
+            <div class="col-md-6">
+                {{ detail.label_value('No. Emp.', persona.numero_empleado) }}
+                <div class="row">
+                    <div class="col-md-3 text-end">
+                        Situación
+                    </div>
+                    <div class="col-md-9">
+                        {% if persona.situacion in ('A.D.', 'A.D.(B)', 'A.D.C.S.', 'A.D.SUS') %}
+                        <h5><span class="badge rounded-pill bg-primary">{{
+                                persona.SITUACIONES[persona.situacion] }}</span></h5>
+                        {% elif persona.situacion == 'A.I.' %}
+                        <h5><span class="badge rounded-pill bg-success">{{
+                                persona.SITUACIONES[persona.situacion] }}</span></h5>
+                        {% elif persona.situacion in ('B', 'P') %}
+                        <h5><span class="badge rounded-pill bg-secondary">{{
+                                persona.SITUACIONES[persona.situacion] }}</span></h5>
+                        {% elif persona.situacion == 'C.E.' %}
+                        <h5><span class="badge rounded-pill bg-danger">{{
+                                persona.SITUACIONES[persona.situacion] }}</span></h5>
+                        {% elif persona.situacion in ('L.G.', 'L.S.G.S.', 'L.P.O.P.C.') %}
+                        <h5><span class="badge rounded-pill text-dark bg-warning">{{
+                                persona.SITUACIONES[persona.situacion] }}</span></h5>
+                        {% elif persona.situacion == 'V' %}
+                        <h5><span class="badge rounded-pill bg-info">{{
+                                persona.SITUACIONES[persona.situacion] }}</span></h5>
+                        {% else %}
+                        <strong>{{ persona.situacion }}</strong>
+                        {% endif %}
+                    </div>
+                </div>
+                <div class="img-fluid img-det">
+                    <img src='/static/img/User-Default.jpg '>
+                </div>
+                {{ detail.label_value('Fecha de Baja', persona.fecha_baja) }}
+                {% if persona.falta_papeleria %}
+                    <div class="row">
+                        <div class="col-md-12 text-end">
+                            <h5><span class="badge rounded-pill text-dark bg-warning">— Falta Papelería —</span></h5>
+                        </div>
+                    </div>
+                {% endif %}
+            </div>
+            <div class="col-md-6">
+                {{ detail.label_value('Nombres', persona.nombres) }}
+                {{ detail.label_value('Apellido primero', persona.apellido_primero) }}
+                {{ detail.label_value('Apellido segundo', persona.apellido_segundo) }}
+                {{ detail.label_value('Sexo', persona.sexo + ': ' + persona.SEXOS[persona.sexo]) }}
+                {{ detail.label_value('R.F.C.', persona.rfc) }}
+                {{ detail.label_value('C.U.R.P.', persona.curp) }}
+                {{ detail.label_value('email', persona.email) }}
+                {{ detail.label_value('Teléfono del Trabajo', persona.telefono_trabajo) }}
+                {{ detail.label_value('Teléfono del Trabajo extensión', persona.telefono_trabajo_extension) }}
+            </div>
+        </div>
     {% endcall %}
     <!-- Menú de secciones -->
     <div class="btn-group btn-group-sm mb-3" role="group">
-        <a id="btn_datos_personales" href="#" class="btn btn-outline-primary">Datos Personales</a>
-        <a id="btn_archivos_adjuntos" href="#" class="btn btn-outline-primary">Archivos Adjuntos</a>
-        <a id="btn_domicilios" href="#" class="btn btn-outline-primary">Domicilios</a>
-        <a id="btn_historial_academico" href="#" class="btn btn-outline-primary">Historial Académico</a>
+        <a id="btn_datos_personales" href="{{url_for('personas.detail_section', seccion='datos_personales', persona_id=persona.id)}}" class="btn btn-outline-primary">Datos Personales</a>
+        <a id="btn_archivos_adjuntos" href="#" class="btn btn-outline-primary disabled">Archivos Adjuntos</a>
+        <a id="btn_domicilios" href="#" class="btn btn-outline-primary disabled">Domicilios</a>
+        <a id="btn_historial_academico" href="{{url_for('personas.detail_section', seccion='historial_academico', persona_id=persona.id)}}" class="btn btn-outline-primary">Historial Académico</a>
         <a id="btn_historial_puestos" href="{{url_for('personas.detail_section', seccion='historial_puestos', persona_id=persona.id)}}" class="btn btn-outline-primary">Historial de Puestos</a>
         <a id="btn_incapacidades" href="{{url_for('personas.detail_section', seccion='incapacidades', persona_id=persona.id)}}" class="btn btn-outline-primary">Incapacidades</a>
         <a id="btn_licencias" href="{{url_for('personas.detail_section', seccion='licencias', persona_id=persona.id)}}" class="btn btn-outline-primary">Licencias</a>
-        <a id="btn_nombramientos" href="#" class="btn btn-outline-primary">Nombramientos</a>
+        <a id="btn_nombramientos" href="#" class="btn btn-outline-primary disabled">Nombramientos</a>
     </div>
 {% endblock %}
 
