--- a/orion/blueprints/personas/templates/personas/detail_datos_generales.jinja2
+++ b/orion/blueprints/personas/templates/personas/detail_datos_generales.jinja2
@@ -81,7 +81,7 @@
     <div class="btn-group btn-group-sm mb-3" role="group">
         <a id="btn_datos_personales" href="{{url_for('personas.detail_section', seccion='datos_personales', persona_id=persona.id)}}" class="btn btn-outline-primary">Datos Personales</a>
         <a id="btn_archivos_adjuntos" href="#" class="btn btn-outline-primary disabled">Archivos Adjuntos</a>
-        <a id="btn_domicilios" href="#" class="btn btn-outline-primary disabled">Domicilios</a>
+        <a id="btn_domicilios" href="{{url_for('personas.detail_section', seccion='domicilios', persona_id=persona.id)}}" class="btn btn-outline-primary">Domicilios</a>
         <a id="btn_historial_academico" href="{{url_for('personas.detail_section', seccion='historial_academico', persona_id=persona.id)}}" class="btn btn-outline-primary">Historial Académico</a>
         <a id="btn_historial_puestos" href="{{url_for('personas.detail_section', seccion='historial_puestos', persona_id=persona.id)}}" class="btn btn-outline-primary">Historial de Puestos</a>
         <a id="btn_incapacidades" href="{{url_for('personas.detail_section', seccion='incapacidades', persona_id=persona.id)}}" class="btn btn-outline-primary">Incapacidades</a>
